# RAG

./: README.md  main.py  pyproject.toml  requirements.txt  test.txt  typesense.ipynb
agenticrag/: 1-agenticrag.ipynb
data/vector_store/: chroma.sqlite3  wqija4v3e1tfmgndp-api-keys-1770272642.txt
notebook/: document.ipynb  pdf_loader.ipynb
